opam-version: "2.0"
maintainer: "Phat Ky"
authors: ["Phat Ky <kyp0717@gmail.com>"]
license: "ISC"
tags: ["org:mirage" "org:ocamllabs"]
homepage: "https://github.com/kyp0717/ocaml-alpaca"
doc: "https://avsm.github.io/ocaml-yaml/"
bug-reports: "https://github.com/avsm/ocaml-yaml/issues"
depends: [
  "ocaml" {>= "4.03.0"}
  "dune" {build & >="1.3"}
  "dune-configurator"
  "ppx_sexp_conv" {>= "v0.9.0"}
  "sexplib"
  "rresult"
  "yaml"
  "fmt"
  "logs"
  "bos"
  "mdx" {with-test}
  "alcotest" {with-test}
  "junit_alcotest" {with-test}
  "ezjsonm" {with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/avsm/ocaml-yaml.git"
synopsis: "API for alpaca"
description: """
This is test by Phat Ky
The [Yaml module docs](http://anil-code.recoil.org/ocaml-yaml/yaml/Yaml/index.html) are browseable online.
"""
